[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async>=0.6.2",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "pandas>=2.3.3",
    "pg>=0.1",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.0",
    "uvicorn==0.32.0",
    "websockets>=15.0.1",
]
